Fix z-index header decoration bug, add drop shadow to person card

--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -7,7 +7,7 @@ header {
   position: fixed;
   right: 0;
   top: 0;
-  z-index: var(--zindex-header);
+  z-index: var(--z-index-header);
 
   .logo-link {
     line-height: 0;
@@ -35,4 +35,5 @@ header {
   position: fixed;
   top: var(--header-height);
   width: 100%;
+  z-index: var(--z-index-header-decoration);
 }
