--- a/src/styles/components/_person-card.scss
+++ b/src/styles/components/_person-card.scss
@@ -1,5 +1,6 @@
 .person-card {
   border-radius: 0.625rem;
+  box-shadow: 0 0.25rem 0.25rem rgba(0, 0, 0, 0.05);
   padding-bottom: 1.25rem;
   padding-top: 4.5rem;
   position: relative;
